Changelog for CMFDiffTool

    (name of developer listed in brackets)

CMFDiffTool 0.3 2006-10-02

    - Product installation is now based on a GenericSetup extension profile.
      [hannosch]

    - Code modernization for Python 2.4 / CMF 1.6.
      [hannosch]

    - Initial version.
      [brentmh]